toml-pretty-deser/compilation_failure_tests/tagged_enum_multi_fields.stderr
error: tagged enum variants must have exactly one unnamed field
  --> compilation_failure_tests/tagged_enum_multi_fields.rs:10:5
   |
10 |     TagA (MyStruct,MyStruct),
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
